--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
     <div id="container">
         <div id="mobile-header">
             <div id="mobile-logo">
-                <img src="pizzalogo.png" alt="image of logo">
+                <img src="images/pizzalogo.png" alt="image of logo">
 
             </div>
             <div id="mobile-spacer">
@@ -48,8 +48,8 @@
             </div>
         </div>
         <div id="header">
-            <h3><img id="pizza-logo" width="8%" src="pizzalogo.png" alt="pizza-log">Okotoks Pizza</h3>
-            <img id="pizza-logo-two" src="pizzalogo.png" alt="pizza-log">
+            <h3><img id="pizza-logo" width="8%" src="images/pizzalogo.png" alt="pizza-log">Okotoks Pizza</h3>
+            <img id="pizza-logo-two" src="images/pizzalogo.png" alt="pizza-log">
             <a href="index.html">Home</a>
             <a href="menu.html">Menu</a>
             <a href="about.html">About us</a>
@@ -86,16 +86,16 @@
             <div id="content-3">
                 <h4>Our Photo Gallery</h4><br><br>
                 <div id="content3-1">
-                    <img src="contactimg1.jpg" alt="image of photo gallery one">
-                    <img src="contactimg2.jpg" alt="image of photo gallery two">
-                    <img src="contactimg3.jpg" alt="image of photo gallery three">
-                    <img src="contactimg4.jpg" alt="image of photo gallery four">
-                    <img src="contactimg5.jpg" alt="image of photo gallery five">
-                    <img src="contactimg6.jpg" alt="image of photo gallery six">
-                    <img src="contactimg7.jpg" alt="image of photo gallery seven">
-                    <img src="contactimg8.jpg" alt="image of photo gallery eight">
-                    <img src="contactimg9.jpg" alt="image of photo gallery nine">
-                    <img src="contactimg10.jpg" alt="image of photo gallery ten">
+                    <img src="images/contactimg1.jpg" alt="image of photo gallery one">
+                    <img src="images/contactimg2.jpg" alt="image of photo gallery two">
+                    <img src="images/contactimg3.jpg" alt="image of photo gallery three">
+                    <img src="images/contactimg4.jpg" alt="image of photo gallery four">
+                    <img src="images/contactimg5.jpg" alt="image of photo gallery five">
+                    <img src="images/contactimg6.jpg" alt="image of photo gallery six">
+                    <img src="images/contactimg7.jpg" alt="image of photo gallery seven">
+                    <img src="images/contactimg8.jpg" alt="image of photo gallery eight">
+                    <img src="images/contactimg9.jpg" alt="image of photo gallery nine">
+                    <img src="images/contactimg10.jpg" alt="image of photo gallery ten">
                 </div>
             </div>
             
@@ -105,11 +105,11 @@
 
             <h5 id="footerh5-one">@copyright2020,OkotoksPizza.ca<br>All rights reserved</h5>
             <div id="footerdiv-one">
-                <a href="https://www.facebook.com/"><img width="3%" src="facebookicon.png" alt="facebook icon"></a>
-                <a href="https://twitter.com/"><img width="3%" src="twittericon.png" alt="twitter icon"></a>
-                <a href="https://www.instagram.com/"><img width="3%" src="instagram.png" alt="instagram icon"></a>
-                <a href="mailto:info@okotokspizza.ca"><img width="3%" src="email.png" alt="email icon"></a>
-                <a href="https://www.consumeraffairs.com/food/pizza-hut.html"><img width="3%" src="review.png"
+                <a href="https://www.facebook.com/"><img width="3%" src="images/facebookicon.png" alt="facebook icon"></a>
+                <a href="https://twitter.com/"><img width="3%" src="images/twittericon.png" alt="twitter icon"></a>
+                <a href="https://www.instagram.com/"><img width="3%" src="images/instagram.png" alt="instagram icon"></a>
+                <a href="mailto:info@okotokspizza.ca"><img width="3%" src="images/email.png" alt="email icon"></a>
+                <a href="https://www.consumeraffairs.com/food/pizza-hut.html"><img width="3%" src="images/review.png"
                         alt="review icon"></a>
 
             </div>
