--- a/menu.html
+++ b/menu.html
@@ -24,7 +24,7 @@
     <div id="container">
         <div id="mobile-header">
             <div id="mobile-logo">
-                <img src="pizzalogo.png" alt="image of logo">
+                <img src="images/pizzalogo.png" alt="image of logo">
 
             </div>
             <div id="mobile-spacer">
@@ -48,8 +48,8 @@
             </div>
         </div>
         <div id="header">
-            <h3><img id="pizza-logo" width="8%" src="pizzalogo.png" alt="pizza-log">Okotoks Pizza</h3>
-            <img id="pizza-logo-two" src="pizzalogo.png" alt="pizza-log">
+            <h3><img id="pizza-logo" width="8%" src="images/pizzalogo.png" alt="pizza-log">Okotoks Pizza</h3>
+            <img id="pizza-logo-two" src="images/pizzalogo.png" alt="pizza-log">
             <a href="index.html">Home</a>
             <a href="menu.html">Menu</a>
             <a href="about.html">About us</a>
@@ -72,7 +72,7 @@
             </div>
             <div id="content-two">
                 <div id="content2-1">
-                    <img class="content-image" id="content2-img1" src="vegpizza1.jpg" alt="veggie pizza one"><br>
+                    <img class="content-image" id="content2-img1" src="images/vegpizza1.jpg" alt="veggie pizza one"><br>
                     <h4 class="h4tag" id="content2-h4one">Garden Veggie</h4><br>
                     <div id="atag-1">
                     <a class="content-atag" id="content2-atagon" href="#">L<br>$20</a>
@@ -82,7 +82,7 @@
                     fire-roasted tomatoes, red onions + mozzarella.</p>
                 </div>
                 <div id="content2-2">
-                    <img class="content-image" id="content2-img2" src="vegpizza2.jpg" alt="veggie pizza two"><br>
+                    <img class="content-image" id="content2-img2" src="images/vegpizza2.jpg" alt="veggie pizza two"><br>
                     <h4 class="h4tag" id="content2-h4two">Veggie Mediterranean</h4><br>
                     <div  id="atag-2">
                     <a class="content-atag" id="content2-atag4" href="#">L<br>$22</a>
@@ -92,7 +92,7 @@
                     onions, feta + mozzarella.</p>
                 </div>
                 <div id="content2-3">
-                    <img class="content-image" id="content4-img3" src="vegpizza3.jpg" alt="veggie pizza three"><br>
+                    <img class="content-image" id="content4-img3" src="images/vegpizza3.jpg" alt="veggie pizza three"><br>
                     <h4 class="h4tag" id="content4-h4three">Veggie Korma</h4><br>
                     <div  id="atag-3">
                     <a class="content-atag" id="content4-atag7" href="#">L<br>$21</a>
@@ -103,7 +103,7 @@
                     peppers, mozzarella + cheddar.</p>
                 </div>
                 <div id="content2-4">
-                    <img class="content-image" id="content4-img4" src="vegpizza4.jpg" alt="veggie pizza four"><br>
+                    <img class="content-image" id="content4-img4" src="images/vegpizza4.jpg" alt="veggie pizza four"><br>
                     <h4 class="h4tag" id="content4-h4four">Pesto Vegetarian</h4><br>
                     <div  id="atag-4">
                     <a class="content-atag" id="content4-atag10" href="#">L<br>$22</a>
@@ -113,7 +113,7 @@
                     onions, formaggio blend + mozzarella.</p>
                 </div>
                 <div id="content2-5">
-                    <img class="content-image" id="content4-img5" src="vegpizza5.jpg" alt="veggie pizza five"><br>
+                    <img class="content-image" id="content4-img5" src="images/vegpizza5.jpg" alt="veggie pizza five"><br>
                     <h4 class="h4tag" id="content4-h4five">Meat-Free Pepperoni</h4><br>
                     <div  id="atag-5">
                     <a class="content-atag" id="content4-atag13" href="#">L<br>$20</a>
@@ -123,7 +123,7 @@
                     mozzarella.</p>
                 </div>
                 <div id="content2-6">
-                    <img class="content-image" id="content4-img6" src="vegpizza6.jpg" alt="veggie pizza six"><br>
+                    <img class="content-image" id="content4-img6" src="images/vegpizza6.jpg" alt="veggie pizza six"><br>
                     <h4 class="h4tag" id="content4-h4six">Cheese Pizza</h4><br>
                     <div  id="atag-6">
                     <a  class="content-atag" id="content4-atag16" href="#">L<br>$15</a>
@@ -132,7 +132,7 @@
                     <p class="content-ptag">Organic tomato sauce + mozzarella.</p>
                 </div>
                 <div id="content2-7">
-                    <img class="content-image" id="content5-img1" src="vegpizza7.jpg" alt="plant-based pizza one"><br>
+                    <img class="content-image" id="content5-img1" src="images/vegpizza7.jpg" alt="plant-based pizza one"><br>
                     <h4 class="h4tag" id="content5-h4one">Spicy Hawaiian</h4><br>
                     <div  id="atag-7">
                     <a  class="content-atag" id="content5-atag1" href="#">L<br>$21</a>
@@ -142,7 +142,7 @@
                     peppers, chilli flakes, pineapple + dairy-free Daiya cheeze..</p>
                 </div>
                 <div id="content2-8">
-                    <img class="content-image" id="content5-img2" src="vegpizza8.jpg" alt="plant-based pizza two"><br>
+                    <img class="content-image" id="content5-img2" src="images/vegpizza8.jpg" alt="plant-based pizza two"><br>
                     <h4 class="h4tag" id="content5-h4two">Mediterranean</h4><br>
                     <div  id="atag-8">
                     <a  class="content-atag" id="content5-atag4" href="#">L<br>$21</a>
@@ -152,7 +152,7 @@
                     spinach leaves, roasted garlic, fire-roasted tomatoes + dairy-free Daiya cheeze.</p>
                 </div>
                 <div id="content2-9">
-                    <img class="content-image" id="content5-img3" src="vegpizza9.jpg" alt="plant-based pizza three"><br>
+                    <img class="content-image" id="content5-img3" src="images/vegpizza9.jpg" alt="plant-based pizza three"><br>
                     <h4 class="h4tag" id="content5-h4three"> Deluxe Pepperoni</h4><br>
                     <div  id="atag-9">
                     <a  class="content-atag" id="content5-atag7" href="#">L<br>$21</a>
@@ -162,7 +162,7 @@
                     onions + dairy-free Daiya cheeze.</p>
                 </div>
                 <div id="content2-10">
-                    <img class="content-image" id="content5-img4" src="vegpizza10.jpg" alt="plant-based pizza four"><br>
+                    <img class="content-image" id="content5-img4" src="images/vegpizza10.jpg" alt="plant-based pizza four"><br>
                     <h4 class="h4tag" id="content5-h4four">Beyond Spicy Calabrese</h4><br>
                     <div  id="atag-10">
                     <a  class="content-atag" id="content5-atag10" href="#">L<br>$21</a>
@@ -172,7 +172,7 @@
                     onions, red peppers, fire-roasted tomatoes, hot banana peppers + dairy-free Daiya cheeze.</p>
                 </div>
                 <div id="content2-11">
-                    <img class="content-image" id="content6-img1" src="meatpizza1.jpg" alt="meat pizza one"><br>
+                    <img class="content-image" id="content6-img1" src="images/meatpizza1.jpg" alt="meat pizza one"><br>
                     <h4 class="h4tag" id="content6-h4one">BBQ Bacon Chicken</h4><br>
                     <div  id="atag-11">
                     <a  class="content-atag" id="content6-atag1" href="#">L<br>$21</a>
@@ -182,7 +182,7 @@
                     cheddar. </p>
                 </div>
                 <div id="content2-12">
-                    <img class="content-image" id="content6-img2" src="meatpizza2.jpg" alt="meat pizza two"><br>
+                    <img class="content-image" id="content6-img2" src="images/meatpizza2.jpg" alt="meat pizza two"><br>
                     <h4 class="h4tag" id="content6-h4two">Chicken Tacon</h4><br>
                     <div  id="atag-12">
                     <a  class="content-atag"id="content6-atag4" href="#">L<br>$22</a>
@@ -192,7 +192,7 @@
                     tomatoes + cheddar. </p>
                 </div>
                 <div id="content2-13">
-                    <img class="content-image" id="content6-img3" src="meatpizza3.jpg" alt="meat pizza three"><br>
+                    <img class="content-image" id="content6-img3" src="images/meatpizza3.jpg" alt="meat pizza three"><br>
                     <h4 class="h4tag" id="content6-h4three">Fajita</h4><br>
                     <div  id="atag-13">
                     <a class="content-atag" id="content6-atag7" href="#">L<br>$23</a>
@@ -201,7 +201,7 @@
                     <p class="content-ptag">Fresh salsa, grilled chicken, green peppers, red peppers, mozzarella + cheddar.</p>
                 </div>
                 <div id="content2-14">
-                    <img class="content-image" id="content6-img4" src="meatpizza4.jpg" alt="meat pizza four"><br>
+                    <img class="content-image" id="content6-img4" src="images/meatpizza4.jpg" alt="meat pizza four"><br>
                     <h4 class="h4tag" id="content6-h4four">Pesto Chicken</h4><br>
                     <div  id="atag-14">
                     <a  class="content-atag" id="content6-atag10" href="#">L<br>$22</a>
@@ -211,7 +211,7 @@
                     + mozzarella.</p>
                 </div>
                 <div id="content2-15">
-                    <img class="content-image" id="content6-img5" src="meatpizza5.jpg" alt="meat pizza five"><br>
+                    <img class="content-image" id="content6-img5" src="images/meatpizza5.jpg" alt="meat pizza five"><br>
                     <h4 class="h4tag" id="content6-h4five">Tropical Chicken</h4><br>
                     <div  id="atag-15">
                     <a class="content-atag" id="content6-atag13" href="#">L<br>$23</a>
@@ -221,7 +221,7 @@
                     caramelized onions, mozzarella + cheddar. </p>
                 </div>
                 <div id="content2-16">
-                    <img class="content-image" id="content6-img6" src="meatpizza6.jpg" alt="meat pizza six"><br>
+                    <img class="content-image" id="content6-img6" src="images/meatpizza6.jpg" alt="meat pizza six"><br>
                     <h4 class="h4tag" id="content6-h4six">Chipotle Chicken</h4><br>
                     <div  id="atag-16">
                     <a  class="content-atag" id="content6-atag16" href="#">L<br>$24</a>
@@ -230,7 +230,7 @@
                     <p class="content-ptag">Chipotle cilantro sauce, grilled chicken,topped with mozzarella + cheddar.</p>
                 </div>
                 <div id="content2-17">
-                    <img class="content-image" id="content6-img7" src="meatpizza7.jpg" alt="meat pizza seven"><br>
+                    <img class="content-image" id="content6-img7" src="images/meatpizza7.jpg" alt="meat pizza seven"><br>
                     <h4 class="h4tag" id="content6-h4seven">Chicken Club </h4><br>
                     <div  id="atag-17">
                     <a  class="content-atag" id="content6-atag19" href="#">L<br>$23</a>
@@ -240,7 +240,7 @@
                     mozzarella.</p>
                 </div>
                 <div id="content2-18">
-                    <img class="content-image" id="content6-img8" src="meatpizza8.jpg" alt="meat pizza eight"><br>
+                    <img class="content-image" id="content6-img8" src="images/meatpizza8.jpg" alt="meat pizza eight"><br>
                     <h4 class="h4tag" id="content6-h4eight">Pepperoni </h4><br>
                     <div  id="atag-18">
                     <a  class="content-atag" id="content6-atag22" href="#">L<br>$24</a>
@@ -249,7 +249,7 @@
                     <p class="content-ptag">Organic tomato sauce, pepperoni + mozzarella</p>
                 </div>
                 <div id="content2-19">
-                    <img class="content-image" id="content6-img9" src="meatpizza9.jpg" alt="meat pizza nine"><br>
+                    <img class="content-image" id="content6-img9" src="images/meatpizza9.jpg" alt="meat pizza nine"><br>
                     <h4 class="h4tag" id="content6-h4nine">New York Deli</h4><br>
                     <div  id="atag-19">
                     <a  class="content-atag" id="content6-atag25" href="#">L<br>$25</a>
@@ -259,7 +259,7 @@
                     sausage, mozzarella + cheddar.</p>
                 </div>
                 <div id="content2-20">
-                    <img class="content-image" id="content6-img10" src="meatpizza10.jpg" alt="meat pizza ten"><br>
+                    <img class="content-image" id="content6-img10" src="images/meatpizza10.jpg" alt="meat pizza ten"><br>
                     <h4 class="h4tag" id="content6-h4ten">Tropical Hawaiian</h4><br>
                     <div  id="atag-20">
                     <a  class="content-atag" id="content6-atag28" href="#">L<br>$24</a>
@@ -268,7 +268,7 @@
                     <p class="content-ptag">Sweet + smoky tropical sauce, bacon, Canadian ham, pineapple,cheddar</p>
                 </div>
                 <div id="content2-21">
-                    <img class="content-image" id="content6-img11" src="meatpizza11.jpg" alt="meat pizza eleven"><br>
+                    <img class="content-image" id="content6-img11" src="images/meatpizza11.jpg" alt="meat pizza eleven"><br>
                     <h4 class="h4tag" id="content6-h4eleven">True Canadian</h4><br>
                     <div  id="atag-21">
                     <a class="content-atag" id="content6-atag31" href="#">L<br>$23</a>
@@ -277,7 +277,7 @@
                     <p class="content-ptag">A summer classic, stacked with organic tomato sauce, extra pepperoni, bacon and cheddar. </p>
                 </div>
                 <div id="content2-22">
-                    <img class="content-image" id="content6-img12" src="meatpizza12.jpg" alt="meat pizza twelve"><br>
+                    <img class="content-image" id="content6-img12" src="images/meatpizza12.jpg" alt="meat pizza twelve"><br>
                     <h4 class="h4tag" id="content6-h4twelve">Spicy Capicolo</h4><br>
                     <div  id="atag-22">
                     <a  class="content-atag" id="content6-atag34" href="#">L<br>$23</a>
@@ -286,7 +286,7 @@
                     <p class="content-ptag">A summer classic,extra pepperoni, bacon and cheddar. </p>
                 </div>
                 <div id="content2-23">
-                    <img class="content-image" id="content6-img13" src="meatpizza13.jpg" alt="meat pizza thirteen"><br>
+                    <img class="content-image" id="content6-img13" src="images/meatpizza13.jpg" alt="meat pizza thirteen"><br>
                     <h4 class="h4tag" id="content6-h4thirteen">Philly Steak</h4><br>
                     <div  id="atag-23">
                     <a  class="content-atag" id="content6-atag37" href="#">L<br>$23</a>
@@ -295,7 +295,7 @@
                     <p class="content-ptag">Jalapeño sauce,steak,peppers, sautéed mushrooms + mozzarella.. </p>
                 </div>
                 <div id="content2-24">
-                    <img class="content-image" id="content6-img14" src="meatpizza14.jpg" alt="meat pizza fourteen"><br>
+                    <img class="content-image" id="content6-img14" src="images/meatpizza14.jpg" alt="meat pizza fourteen"><br>
                     <h4 class="h4tag" id="content6-h4fourteen">Beef Taco</h4><br>
                     <div  id="atag-24">
                     <a  class="content-atag" id="content6-atag40" href="#">L<br>$24</a>
@@ -309,11 +309,11 @@
 
             <h5 id="footerh5-one">@copyright2020,OkotoksPizza.ca<br>All rights reserved</h5>
             <div id="footerdiv-one">
-                <a href="https://www.facebook.com/"><img width="3%" src="facebookicon.png" alt="facebook icon"></a>
-                <a href="https://twitter.com/"><img width="3%" src="twittericon.png" alt="twitter icon"></a>
-                <a href="https://www.instagram.com/"><img width="3%" src="instagram.png" alt="instagram icon"></a>
-                <a href="mailto:info@okotokspizza.ca"><img width="3%" src="email.png" alt="email icon"></a>
-                <a href="https://www.consumeraffairs.com/food/pizza-hut.html"><img width="3%" src="review.png"
+                <a href="https://www.facebook.com/"><img width="3%" src="images/facebookicon.png" alt="facebook icon"></a>
+                <a href="https://twitter.com/"><img width="3%" src="images/twittericon.png" alt="twitter icon"></a>
+                <a href="https://www.instagram.com/"><img width="3%" src="images/instagram.png" alt="instagram icon"></a>
+                <a href="mailto:info@okotokspizza.ca"><img width="3%" src="images/email.png" alt="email icon"></a>
+                <a href="https://www.consumeraffairs.com/food/pizza-hut.html"><img width="3%" src="images/review.png"
                         alt="review icon"></a>
 
             </div>
