--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div id="container">
         <div id="mobile-header">
             <div id="mobile-logo">
-                <img src="pizzalogo.png" alt="image of logo">
+                <img src="images/pizzalogo.png" alt="image of logo">
 
             </div>
             <div id="mobile-spacer">
@@ -50,8 +50,8 @@
         </div>
         <div id="header">
 
-            <h3><img id="pizza-logo" width="8%" src="pizzalogo.png" alt="pizza-log">Okotoks Pizza</h3>
-            <img id="pizza-logo-two" src="pizzalogo.png" alt="pizza-log">
+            <h3><img id="pizza-logo" width="8%" src="images/pizzalogo.png" alt="pizza-logo">Okotoks Pizza</h3>
+            <img id="pizza-logo-two" src="images/pizzalogo.png" alt="pizza-logo">
             <a href="index.html">Home</a>
             <a href="menu.html">Menu</a>
             <a href="about.html">About us</a>
@@ -70,10 +70,10 @@
 
             </div>
             <div id="content-2">
-                <img class="condent2-images" id="content1-img1" src="coffee.jpg" alt="image of coffee">
-                <img class="condent2-images" id="content2-img1" src="restaurant.jpg" alt="image of restaurant">
-                <img class="condent2-images" id="content3-img1" src="pizzacutting.jpg" alt="image of pizza cutting">
-                <img class="condent2-images" id="content4-img1" src="pizzaeating.jpg" alt="image of pizza eating">
+                <img class="condent2-images" id="content1-img1" src="images/coffee.jpg" alt="image of coffee">
+                <img class="condent2-images" id="content2-img1" src="images/restaurant.jpg" alt="image of restaurant">
+                <img class="condent2-images" id="content3-img1" src="images/pizzacutting.jpg" alt="image of pizza cutting">
+                <img class="condent2-images" id="content4-img1" src="images/pizzaeating.jpg" alt="image of pizza eating">
 
             </div>
             <div id="content-3">
@@ -82,10 +82,10 @@
                     Valbella meats and a healthy Flax crust. You feel good about ordering it. You feel good about eating
                     it. And you feel even better knowing we're always ready to make you more".........."<a id="content3-atagone" href="about.html">Read More</a>
                 </h3>
-                <img id="content3-img1" src="pizzaimage1.jpg" alt="image of pizza">
+                <img id="content3-img1" src="images/pizzaimage1.jpg" alt="image of pizza">
             </div>
             <div id="content-4">
-                <img id="content4-img2" src="pizzaimage2.jpg" alt="image of pizza2">
+                <img id="content4-img2" src="images/pizzaimage2.jpg" alt="image of pizza2">
                 <h3 id="content4-h3tagone">Our pizzas are made the traditional way, thin & crispy.<br><br><br><a id="content4-atagone" href="menu.html">View our pizza menu</a></h3></h3>
             </div>
             <div id="content-two">
@@ -96,22 +96,22 @@
                     <p id="contenttwo-ptagone">Bustling with warm and friendly conversation,delicious pizza.<br><br>Italian
                     comfort food we are proud of.</p>
                     <hr id="hrtag-two">
-                    <img class="condenttwoimages" id="contenttwo-imageone" src="coffee.jpg" alt="image of coffee">
-                    <img class="condenttwoimages" id="contenttwo-imagetwo" src="restaurant.jpg" alt="image of restaurant">
-                    <img class="condenttwoimages" id="contenttwo-imagethree" src="pizzacutting.jpg"
+                    <img class="condenttwoimages" id="contenttwo-imageone" src="images/coffee.jpg" alt="image of coffee">
+                    <img class="condenttwoimages" id="contenttwo-imagetwo" src="images/restaurant.jpg" alt="image of restaurant">
+                    <img class="condenttwoimages" id="contenttwo-imagethree" src="images/pizzacutting.jpg"
                     alt="image of pizza cutting">
-                    <img class="condenttwoimages" id="contenttwo-imagefour" src="pizzaeating.jpg"
+                    <img class="condenttwoimages" id="contenttwo-imagefour" src="images/pizzaeating.jpg"
                     alt="image of pizza eating">
                 </div>
                 <div id="contenttwo-two">
-                    <img id="contenttwo-imagefive" src="pizzaimage1.jpg" alt="image of pizza">
+                    <img id="contenttwo-imagefive" src="images/pizzaimage1.jpg" alt="image of pizza">
                     <h3 id="contenttwo-h3tagone">"Okotoks Pizzas are made with only the freshest ingredients like mozzarella, roma tomatoes,
                         made-from-scratch sauce and even features premium toppings like Sorriso Pepperoni, salami from
                         Valbella meats and a healthy Flax crust. You feel good about ordering it. You feel good about eating
                         it. And you feel even better knowing we're always ready to make you more".........."<a id="contenttwo-atagone" href="about.html">Read More</a>
                     </h3>
                     <h3 id="contenttwo-h3tagtwo"> Our pizzas are made the traditional way, thin & crispy.<br><br><br><a id="contenttwo-atagtwo" href="menu.html">View our pizza menu</a></h3>
-                    <img id="contenttwo-imagesix" src="pizzaimage2.jpg" alt="image of pizza2">
+                    <img id="contenttwo-imagesix" src="images/pizzaimage2.jpg" alt="image of pizza2">
 
                 </div>
             </div>
@@ -121,11 +121,11 @@
 
             <h5 id="footerh5-one">@copyright2020,OkotoksPizza.ca<br>All rights reserved.</h5>
             <div id="footerdiv-one">
-                <a href="https://www.facebook.com/"><img width="3%" src="facebookicon.png" alt="facebook icon"></a>
-                <a href="https://twitter.com/"><img width="3%" src="twittericon.png" alt="twitter icon"></a>
-                <a href="https://www.instagram.com/"><img width="3%" src="instagram.png" alt="instagram icon"></a>
-                <a href="mailto:info@okotokspizza.ca"><img width="3%" src="email.png" alt="email icon"></a>
-                <a href="https://www.consumeraffairs.com/food/pizza-hut.html"><img width="3%" src="review.png"
+                <a href="https://www.facebook.com/"><img width="3%" src="images/facebookicon.png" alt="facebook icon"></a>
+                <a href="https://twitter.com/"><img width="3%" src="images/twittericon.png" alt="twitter icon"></a>
+                <a href="https://www.instagram.com/"><img width="3%" src="images/instagram.png" alt="instagram icon"></a>
+                <a href="mailto:info@okotokspizza.ca"><img width="3%" src="images/email.png" alt="email icon"></a>
+                <a href="https://www.consumeraffairs.com/food/pizza-hut.html"><img width="3%" src="images/review.png"
                         alt="review icon"></a>
 
             </div>
