--- a/location.html
+++ b/location.html
@@ -23,7 +23,7 @@
     <div id="container">
         <div id="mobile-header">
             <div id="mobile-logo">
-                <img src="pizzalogo.png" alt="image of logo">
+                <img src="images/pizzalogo.png" alt="image of logo">
 
             </div>
             <div id="mobile-spacer">
@@ -47,8 +47,8 @@
             </div>
         </div>
         <div id="header">
-            <h3><img id="pizza-logo" width="8%" src="pizzalogo.png" alt="pizza-log">Okotoks Pizza</h3>
-            <img id="pizza-logo-two" src="pizzalogo.png" alt="pizza-log">
+            <h3><img id="pizza-logo" width="8%" src="images/pizzalogo.png" alt="pizza-log">Okotoks Pizza</h3>
+            <img id="pizza-logo-two" src="images/pizzalogo.png" alt="pizza-log">
             <a href="index.html">Home</a>
             <a href="menu.html">Menu</a>
             <a href="about.html">About us</a>
@@ -88,11 +88,11 @@
 
             <h5 id="footerh5-one">@copyright2020,OkotoksPizza.ca<br>All rights reserved</h5>
             <div id="footerdiv-one">
-                <a href="https://www.facebook.com/"><img width="3%" src="facebookicon.png" alt="facebook icon"></a>
-                <a href="https://twitter.com/"><img width="3%" src="twittericon.png" alt="twitter icon"></a>
-                <a href="https://www.instagram.com/"><img width="3%" src="instagram.png" alt="instagram icon"></a>
-                <a href="mailto:info@okotokspizza.ca"><img width="3%" src="email.png" alt="email icon"></a>
-                <a href="https://www.consumeraffairs.com/food/pizza-hut.html"><img width="3%" src="review.png"
+                <a href="https://www.facebook.com/"><img width="3%" src="images/facebookicon.png" alt="facebook icon"></a>
+                <a href="https://twitter.com/"><img width="3%" src="images/twittericon.png" alt="twitter icon"></a>
+                <a href="https://www.instagram.com/"><img width="3%" src="images/instagram.png" alt="instagram icon"></a>
+                <a href="mailto:info@okotokspizza.ca"><img width="3%" src="images/email.png" alt="email icon"></a>
+                <a href="https://www.consumeraffairs.com/food/pizza-hut.html"><img width="3%" src="images/review.png"
                         alt="review icon"></a>
 
             </div>
