completed the coding for webpage

--- a/menu.html
+++ b/menu.html
@@ -14,7 +14,7 @@
     <meta property="og:title" content="Calgary's best pizza shop - Okotoks Pizza">
     <meta property="og:image"
         content="https://www.google.com/search?q=pizza+images&tbm=isch&source=iu&ictx=1&fir=bOy5OMwKTM1UEM%252CrPoPHMiEf84VrM%252C_&vet=1&usg=AI4_-kR6eBstLdK_bTMsEEijrm3Z4gKGhw&sa=X&ved=2ahUKEwiH_7D8oNPqAhUYIDQIHSjPBnwQ9QEwAXoECAoQMg&biw=1366&bih=646">
-    <link rel="icon" type="image/png" href="fast-food.png" />
+    <link rel="icon" type="image/png" href="images/fast-food.png" />
     <link rel="stylesheet" type="text/css" href="style2.css">
     <link href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@1,700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@900&family=Source+Serif+Pro:ital,wght@1,900&display=swap" rel="stylesheet">
