--- a/location.html
+++ b/location.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>OkotoksLocation</title>
     <meta name="description" content="Best Italian pizza shop in Okotoks,Alberta. Come and enjoy your favourite pizza">
-    <meta name="author" content="Okotoks">
+    <meta name="author" content="Dough">
     <meta name="keywords"
         content="Okotoks Location,passion,experience,Best,Unbeatable price,great deal,tasty,variety of pizzas,Italian,flavour,good rating,wow,super,okotoks menu,different types of pizzas">
     <meta name="twitter:title" content="OkotoksPizza in Calgary">
