--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AboutOkotoks</title>
     <meta name="description" content="Best Italian pizza shop in Okotoks,Alberta. Come and enjoy your favourite pizza">
-    <meta name="author" content="Okotoks">
+    <meta name="author" content="Dough">
     <meta name="keywords"
         content="About Okotoks,passion,experience,Best,Unbeatable price,great deal,tasty,variety of pizzas,Italian,flavour,good rating,wow,super,okotoks menu,different types of pizzas">
     <meta name="twitter:title" content="OkotoksPizza in Calgary">
@@ -66,21 +66,20 @@
             </div>
             <div id="content-2">
                 <h2 id="content2-h2tag">Meet the Family</h2>
+                <hr>
                 <h3 id="content2-h3tag">Delicious food and a generous family heritage makes the Okotoks pizza shop
                     special.
                 </h3>
+                <hr>
                 <h4 id="content2-h4tag">The only place in Calgary where you’ll find a variety of pizzas.</h4>
+                <hr>
                 <h5 id="content2-h5tag">We’re a small but nimble family-run take out and delivery pizza shop in Okotoks,
                     Alberta. When we’re not scouring the globe (okay, the prairies) for the freshest, ripest and boldest
                     ingredients, we’re crafting perfect pizzas for you and your family to enjoy. From hot Hawaiians and
                     classic Canadians to crispy wings and decadent fudge brownies, everything at Okotoks Pizza is baked
-                    with love.
-                </h5>
-                <h5 id="content2-h5twotag">There are no short cuts when it comes to our passion. We pull out all the
+                    with love.There are no short cuts when it comes to our passion. We pull out all the
                     stops, giving you the ‘wow’ flavour, experience and consistency you not only want, but deserve. Our
-                    customers keep coming back, again, again, and again.
-                </h5>
-                <h5 id="content2-h5threetag">After watching his parents run a very successful pizza business in Calgary,
+                    customers keep coming back, again, again, and again.After watching his parents run a very successful pizza business in Calgary,
                     Matt Cleveland learned how to make people happy, one topping at a time. Opening the doors to Okotoks
                     Pizza in 2004, Matt has managed to evolve the fresh, traditional Greek-style pizza his family
                     perfected back in the mid 80s to a more modern and convenient comfort food for today’s family on the
