--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Realokotoks</title>
     <meta name="description"
         content="One of the best Italian pizza shop that offers a number of different types of pizza  in Okotoks,Alberta. Come and enjoy your favourite pizza">
-    <meta name="author" content="Okotoks">
+    <meta name="author" content="Dough">
     <meta name="keywords"
         content="Best,Unbeatable price,great deal,tasty,variety of pizzas,Italian,flavour,good rating,wow,super">
     <meta name="twitter:title" content="OkotoksPizza in Calgary">
