Added some positions to pages

--- a/about.html
+++ b/about.html
@@ -98,7 +98,7 @@
                 <a href="mailto:info@okotokspizza.ca"><img width="3%" src="images/email.png" alt="email icon"></a>
                 <a href="https://www.consumeraffairs.com/food/pizza-hut.html"><img width="3%" src="images/review.png"
                         alt="review icon"></a>
-
+                <a href="tel:(403) 555-5555"><img width="3%" src="images/mob.png" alt="mobile icon"></a>
             </div>
             <h5 id="footerh5-two">Powered by:OkotoksPizza.ca</h5>
         </div>
