--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
     <link rel="icon" type="image/png" href="images/fast-food.png" />
     <link rel="stylesheet" type="text/css" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@1,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@900&family=Source+Serif+Pro:ital,wght@1,900&display=swap" rel="stylesheet">
+
 
 </head>
 
